# garmin-screenshot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yaml
garmin_screenshot/: garmin_screenshot.py
tests/: test_garmin_screenshot.py
